# test

./: Cargo.toml  index.html  tauri.conf.json
.github/workflows/: build-tauri.yml
src/: main.rs
