[package]
name = "ssh-client"
version = "0.1.0"
description = "A simple SSH client built with Tauri"
authors = ["Your Name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0" }

[dependencies]
tauri = { version = "1.4.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "1"
anyhow = "1"
tokio-stream = "0.1"
bytes = "1"

[package.metadata.tauri]
build = { beforeDevCommand = "", beforeBuildCommand = "", devPath = "src-tauri/dist", distDir = "../dist" }
package = { productName = "SSHClient", version = "0.1.0" }
updater = { active = false }
windows = [
  { 
    title = "SSH客户端", 
    width = 1024, 
    height = 768, 
    resizable = true, 
    fullscreen = false 
  }
]

[tool.tauri]
allowlist = { all = true }
# security > csp only applies to the embedded webview
security = { csp = null }
# The following makes the environment variable `TAURI_DEBUG` available to your Rust code
embedded-server = { active = true }    